--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,21 @@ jobs:
         node-version: "16.x"
     - name: Instalacja dependencji
       run: npm install
-    - name: Uruchomienie testó
+    - name: Uruchomienie testów
       run: npm run test
-    
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+    - name: Załadowanie kodu
+      uses: actions/checkout@v3
+    - name: Podłączenie App SErvice
+      uses: azure/appservice-bulid@v3
+      with:
+        platform: nodejs
+        version: 16.16.0
+    - name: Wdrożenie aplikacji do Azure App Service
+      uses: azure/webapps-deploy@v1
+      with:
+        app-name: app3pgwiazda
+        publish- profile: ${{ secrets.AZURE}} 
